<resources>
    <string name="app_name">GroceryGo_Admin</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="open_nav">Open Navigation drawer</string>
    <string name="close_nav">Close Navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_title">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="item_category">Item Category</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="add_item">Add Item</string>
    <string name="my_deals">My Deals</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="bakery">Bakery</string>
    <string name="beverages">Beverages</string>
    <string name="meats">Meats</string>
    <string name="view_more">View more</string>
    <string name="quantity_kg">KG</string>
    <string name="currency_rs">$</string>
    <string name="lentils">Lentils</string>
    <string name="update">Update</string>
    <string name="food_category">Food Category</string>
    <string name="update_item">Update Item</string>
    <string name="add">Add</string>
    <string name="add_grocery_button">Add Grocery Button</string>
    <string name="button_add_deal">button_add_deal</string>
    <string name="Username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="delete">Delete</string>
    <string name="item_description">Description...</string>


    <string-array name="categories">
        <item>Fruits</item>
        <item>Vegetables</item>
        <item>Meat</item>
        <item>Bakery</item>
        <item>Beverages</item>
        <item>Lentils</item>
    </string-array>

    <string-array name="price">
        <item>USD</item>
        <item>PKR</item>
    </string-array>

    <string-array name="quantity">
        <item>g</item>
        <item>lb</item>
        <item>dz</item>
    </string-array>

</resources>